crates/mpl-lang/tests/errors/invalid_operator.mpl
dataset:metric | where tag ~= /pattern/

